- markdown added - fixed the body, not accounting overflow of divs (fixed width) -removed unnecessary logs

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,13 @@
   scroll-behavior: smooth;
 
 }
+html, body { 
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  overflow-x: auto;
+  }
 ::-webkit-scrollbar {
     width: 0em;
   }
